# KairosOS

./: .gitignore  CHECKLIST.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  anchored-summary.md
ai/: __init__.py  confidence.py  (+3 more)
src/: Cargo.toml
src/.cargo/: config.toml
src/daemons/: Cargo.toml
src/daemons/kairos-apply/: Cargo.toml
src/daemons/kairos-apply/src/: generation.rs  main.rs  parser.rs  rollback.rs  validator.rs
src/daemons/kairos-bpf/: Cargo.toml
src/daemons/kairos-bpf/src/: bpf.rs  main.rs  mcp_server.rs  policy.rs  telemetry.rs
src/daemons/kairos-git-logger/: Cargo.toml
src/daemons/kairos-git-logger/src/: git_backend.rs  main.rs
src/daemons/kairos-mcp/: Cargo.toml
src/daemons/kairos-mcp/src/: main.rs  protocol.rs  registry.rs  transport.rs
src/git-logger/: Cargo.toml
src/git-logger/src/: lib.rs  main.rs  timeline.rs
src/git-logger/tests/: integration.rs
src/kairos-apply/: Cargo.toml
src/kairos-apply/src/: applier.rs  config.rs  diff.rs  error.rs  generation.rs  lib.rs  main.rs  parser.rs  rollback.rs  telemetry.rs  validator.rs  worker.rs
src/kairos-apply/tests/: integration_test.rs
src/kairos-avionics/: Cargo.toml
src/kairos-avionics/src/: arinc.rs  config.rs  error.rs  lib.rs  main.rs  mavlink.rs  telemetry.rs  worker.rs
src/kairos-avionics/tests/: integration_test.rs
src/kairos-bio/: Cargo.toml
src/kairos-bio/src/: alignment.rs  config.rs  error.rs  lib.rs  main.rs  pipeline.rs  sequence.rs  telemetry.rs  worker.rs
src/kairos-bio/tests/: integration_test.rs
src/kairos-bpf/: Cargo.toml  build.rs
src/kairos-bpf/src/: anomaly.rs  config.rs  error.rs  heal.rs  lib.rs  main.rs  maps.rs  policy.rs  programs.rs  remediation.rs  scheduler.rs  telemetry.rs  thermal.rs  worker.rs
src/kairos-bpf/src/programs/: anomaly.rs  execsnoop.rs  filemon.rs  oomkill.rs  schedlatency.rs  tcptop.rs
src/kairos-bpf/tests/: integration_test.rs
src/kairos-build/: Cargo.toml
src/kairos-build/src/: builder.rs  config.rs  error.rs  image.rs  lib.rs  main.rs  package.rs  telemetry.rs  worker.rs
src/kairos-build/tests/: integration_test.rs
src/kairos-chaos/: Cargo.toml
src/kairos-chaos/src/: lib.rs  main.rs
src/kairos-chaos/tests/: integration.rs
src/kairos-climate/: Cargo.toml
src/kairos-climate/src/: assimilation.rs  config.rs  error.rs  forecast.rs  lib.rs  main.rs  model.rs  telemetry.rs  worker.rs
src/kairos-climate/tests/: integration_test.rs
src/kairos-db/: Cargo.toml
src/kairos-db/src/: config.rs  error.rs  lib.rs  main.rs  mem_bus.rs  query.rs  storage.rs  telemetry.rs  vector.rs  worker.rs
src/kairos-db/tests/: integration_test.rs
src/kairos-fb/: Cargo.toml
src/kairos-fb/src/: canvas.rs  compositor.rs  config.rs  drm.rs  error.rs  lib.rs  main.rs  telemetry.rs  worker.rs
src/kairos-fb/tests/: integration_test.rs
src/kairos-finance/: Cargo.toml
src/kairos-finance/src/: config.rs  error.rs  lib.rs  main.rs  market.rs  risk.rs  telemetry.rs  trading.rs  worker.rs
src/kairos-finance/tests/: integration_test.rs
src/kairos-git-logger/: Cargo.toml
src/kairos-git-logger/src/: committer.rs  config.rs  diff.rs  error.rs  history.rs  lib.rs  main.rs  repo.rs  snapshot.rs  telemetry.rs  timeline.rs  watcher.rs  worker.rs
src/kairos-git-logger/tests/: integration_test.rs
src/kairos-inference-hub/: Cargo.toml
src/kairos-inference-hub/src/: config.rs  error.rs  kv_cache.rs  lib.rs  main.rs  metrics.rs  models.rs  pipeline.rs  quantizer.rs  router.rs  scheduler.rs  speculator.rs  telemetry.rs  worker.rs
src/kairos-inference-hub/tests/: integration_test.rs
src/kairos-llm/: Cargo.toml
src/kairos-llm/src/: config.rs  error.rs  lib.rs  main.rs  model.rs  quantizer.rs  runtime.rs  telemetry.rs  worker.rs
src/kairos-llm/tests/: integration_test.rs
src/kairos-mcp/: Cargo.toml
src/kairos-mcp/src/: arch.rs  audit.rs  auth.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  plugin.rs  protocol.rs  rate_limit.rs  registry.rs  server.rs  telemetry.rs  transport.rs  worker.rs
src/kairos-mcp/tests/: integration_test.rs
src/kairos-mesh/: Cargo.toml
src/kairos-mesh/src/: config.rs  discovery.rs  error.rs  lib.rs  main.rs  telemetry.rs  wg.rs  worker.rs
src/kairos-mesh/src/p2p/: mod.rs
src/kairos-mesh/tests/: integration_test.rs
src/kairos-orchestrator/: Cargo.toml
src/kairos-orchestrator/src/: config.rs  dag.rs  error.rs  executor.rs  lib.rs  main.rs  pipeline.rs  resource.rs  scheduler.rs  task.rs  telemetry.rs  worker.rs
src/kairos-orchestrator/tests/: integration_test.rs
src/kairos-quantum/: Cargo.toml
src/kairos-quantum/src/: config.rs  error.rs  gate.rs  lib.rs  main.rs  simulator.rs  telemetry.rs  worker.rs
src/kairos-quantum/src/pqc/: mod.rs
src/kairos-quantum/tests/: integration_test.rs
src/kairos-recovery/: Cargo.toml
src/kairos-recovery/src/: boot.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  partitions.rs  predict.rs  recovery.rs  telemetry.rs  update.rs  verity.rs  worker.rs
src/kairos-recovery/tests/: integration_test.rs
src/kairos-robotics/: Cargo.toml
src/kairos-robotics/src/: config.rs  control.rs  error.rs  kinematics.rs  lib.rs  main.rs  telemetry.rs  worker.rs
src/kairos-robotics/tests/: integration_test.rs
src/kairos-tui/: Cargo.toml
src/kairos-tui/src/: colors.rs  config.rs  drm.rs  error.rs  font.rs  framebuffer.rs  gestures.rs  input.rs  layout.rs  lib.rs  main.rs  multiplexer.rs  telemetry.rs  terminal.rs  widgets.rs  worker.rs
src/kairos-tui/tests/: integration_test.rs
src/kairos-vision/: Cargo.toml
src/kairos-vision/src/: capture.rs  config.rs  detect.rs  error.rs  lib.rs  main.rs  pipeline.rs  telemetry.rs  worker.rs
src/kairos-vision/tests/: integration_test.rs
src/mcp-servers/filesystem-server/: Cargo.toml  kairos-filesystem-mcp.service
src/mcp-servers/ollama-server/: Cargo.toml  kairos-ollama-mcp.service
src/mcp-servers/process-server/: Cargo.toml  kairos-process-mcp.service
src/mcp-servers/systemd-server/: Cargo.toml  kairos-systemd-mcp.service
src/services/kairos-pkg/: pyproject.toml
(+331 files in other folders)
