[package]
name = "git-logger"
version = "1.0.0"
edition = "2021"
description = "Immutable state timeline and git-backed /etc versioning daemon — production-hardened"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "process", "fs", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[lib]
name = "git_logger"
path = "src/lib.rs"

[[bin]]
name = "git-logger"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"
