[package]
name = "kairos-apply"
version = "1.0.0"
edition = "2021"
description = "Declarative configuration state applier daemon — production-hardened"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "net", "fs", "io-util", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
similar = "2"
sha2 = "0.10"

[lib]
name = "kairos_apply"
path = "src/lib.rs"

[[bin]]
name = "kairos-apply"
path = "src/main.rs"
