[package]
name = "kairos-bpf"
version = "1.0.0"
edition = "2021"
description = "eBPF telemetry and autonomous remediation daemon — production-hardened"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
libbpf-rs = "1.3"
plain = "1"
toml = "0.8"
libbpf-cargo = { version = "0.22", optional = true }

[build-dependencies]
libbpf-cargo = "0.22"

[lib]
name = "kairos_bpf"
path = "src/lib.rs"

[[bin]]
name = "kairos-bpf"
path = "src/main.rs"

[features]
default = []
bpf = ["libbpf-cargo"]