[package]
name = "kairos-chaos"
version = "1.0.0"
edition = "2021"
description = "Gamified chaos engineering daemon — production-hardened"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "process", "fs", "time", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[lib]
name = "kairos_chaos"
path = "src/lib.rs"

[[bin]]
name = "kairos-chaos"
path = "src/main.rs"
