[package]
name = "kairos-git-logger"
version = "1.0.0"
edition = "2021"
description = "Git-backed /etc version tracking daemon — production-hardened"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "fs", "process", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"

[lib]
name = "kairos_git_logger"
path = "src/lib.rs"

[[bin]]
name = "kairos-git-logger"
path = "src/main.rs"
