[package]
name = "kairos-mcp"
version = "1.0.0"
edition = "2021"
description = "MCP protocol router and service registry daemon — production-hardened"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "net", "io-util", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rustls = "0.23"

[lib]
name = "kairos_mcp"
path = "src/lib.rs"

[[bin]]
name = "kairos-mcp"
path = "src/main.rs"