[package]
name = "kairos-robotics"
version = "1.0.0"
edition = "2021"
description = "Robotic control loops and motor drivers daemon — production-hardened"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "fs", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "kairos_robotics"
path = "src/lib.rs"

[[bin]]
name = "kairos-robotics"
path = "src/main.rs"
