[package]
name = "kairos-vision"
version = "1.0.0"
edition = "2021"
description = "Real-time vision processing and object detection daemon — production-hardened"
[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
[lib]
name = "kairos_vision"
path = "src/lib.rs"

[[bin]]
name = "kairos-vision"
path = "src/main.rs"
