[package]
name = "kairos-bpf"
version = "0.2.0"
edition = "2021"
description = "KairosOS eBPF Telemetry & Control Daemon"

[dependencies]
aya = { version = "0.13", features = ["async"] }
aya-log = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
jsonrpc-core = "18"
jsonrpc-stdio-server = "18"
jsonrpc-http-server = "18"
futures = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.31"
nix = { version = "0.29", features = ["feature"] }

[build-dependencies]
anyhow = "1"
cargo_metadata = "0.18"

[features]
default = []
bpf_probes = []
