[package]
name = "kairos-git-logger"
version = "0.2.0"
edition = "2021"
description = "KairosOS Git-backed /etc tracker — every system change is a commit"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "7", features = ["macos_kqueue"] }
git2 = "0.19"
