[package]
name = "filesystem-mcp-server"
version = "1.0.0"
edition = "2021"
description = "MCP server for filesystem operations — read, write, search, stat"

[[bin]]
name = "kairos-filesystem-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "fs", "sync", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
