[package]
name = "systemd-mcp-server"
version = "1.0.0"
edition = "2021"
description = "MCP server for systemd service management"

[[bin]]
name = "kairos-systemd-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "fs", "sync", "io-util", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
