[project]
name = "kairos-pkg"
version = "0.2.0"
description = "KairosOS Personal Knowledge Graph — hybrid vector+graph semantic memory"
requires-python = ">=3.11"
dependencies = [
    "sqlite-vec>=0.1",
    "httpx>=0.27",
    "pydantic>=2",
    "pyyaml>=6",
    "orjson>=3",
]

[project.scripts]
kairos-pkg = "kairos_pkg.cli:main"
